--- a/index.html
+++ b/index.html
@@ -352,16 +352,23 @@
               "
             ></div>
 
-            <div
-              class="card2"
-              style="
-                --image: url('/instagram.png');
-                --angle: -1deg;
-                --x: -10%;
-                --y: -20%;
-                --caption: 'Check my pictures';
-              "
-            ></div>
+            <a
+              href="https://www.instagram.com/joseanegrigolo/"
+              rel="noopener"
+              title="Instagram Link"
+              target="_blank"
+            >
+              <div
+                class="card2"
+                style="
+                  --image: url('/instagram.png');
+                  --angle: -1deg;
+                  --x: -10%;
+                  --y: -20%;
+                  --caption: 'Check my pictures';
+                "
+              ></div
+            ></a>
 
             <div
               class="card2"
