--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="description" content="Page about my dog/wolf Lucky." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Wolf 🐺</title>
 
     <style>
-      @import url(http://fonts.googleapis.com/css?family=roboto);
       html {
         margin: 0;
         padding: 0;
@@ -24,6 +24,7 @@
         overflow: hidden;
       }
 
+      /*Section 1*/
       .background {
         background-size: cover;
         background-repeat: no-repeat;
@@ -55,6 +56,7 @@
       }
 
       .background:first-child {
+        /*pool party picture*/
         background-image: url(/lucky2.jpeg);
         -webkit-transform: translateY(-10vh);
         -ms-transform: translateY(-10vh);
@@ -68,10 +70,12 @@
       }
 
       .background:nth-child(2) {
+        /*mommy day picture*/
         background-image: url(/lucky4.jpg);
       }
 
       .background:nth-child(3) {
+        /*pool picture*/
         background-image: url(/lucky6.jpeg);
       }
 
@@ -127,6 +131,7 @@
         margin-top: 100px;
       }
 
+      /*Section 2*/
       .box {
         width: auto;
         margin: 0px auto;
@@ -199,6 +204,8 @@
         opacity: 0.7;
         background: #0e567c;
       }
+
+      /*Section 3*/
       .card-container2 {
         position: relative;
         margin: 0px auto;
@@ -220,10 +227,12 @@
           rotate(var(--angle));
         will-change: transform;
       }
+
       .card2:hover {
         transform: scale(1) rotate(0deg);
         z-index: 1;
       }
+
       .card2:hover:before {
         opacity: 1;
       }
@@ -253,10 +262,13 @@
         opacity: 0.75;
         text-align: center;
       }
+
+      /*media*/
       @media (max-width: 380px) {
         .content-title {
           font-size: 9vh;
         }
+
         .content-footer {
           font-size: 2vh;
         }
@@ -265,6 +277,7 @@
         .content-margin {
           font-size: 9vh;
         }
+
         #card-container {
           margin: 4px 4px;
           width: 130px;
@@ -302,22 +315,25 @@
   </head>
   <body>
     <div class="container">
+      <!--Section 1-->
       <section class="background">
         <div class="content-wrapper">
           <p class="content-subtitle">— My Baby, My Wolf</p>
-
           <p class="content-title">Lucky</p>
           <p class="content-footer">Scroll down the page with mouse wheel</p>
         </div>
       </section>
+      <!--Section 2-->
       <section class="background">
         <div class="content-wrapper">
           <p class="content-title content-margin">Things about me</p>
+          <!--Cards-->
           <div class="box">
             <div id="card-container">
               <div id="card">
                 <div class="front face">
-                  <img src="/lucky1.jpg" alt="" />
+                  <!--Crazy picture-->
+                  <img src="/lucky1.jpg" alt="Lucky picture" />
                 </div>
                 <div class="back face">
                   <h1 class="title">CRAZY</h1>
@@ -333,7 +349,8 @@
             <div id="card-container">
               <div id="card2">
                 <div class="front face">
-                  <img src="/lucky2.jpeg" alt="" />
+                  <!--pool party picture-->
+                  <img src="/lucky2.jpeg" alt="Lucky picture" />
                 </div>
                 <div class="back face">
                   <h1 class="title">LOVELY</h1>
@@ -349,7 +366,8 @@
             <div id="card-container">
               <div id="card3">
                 <div class="front face">
-                  <img src="/lucky3.jpg" alt="" />
+                  <!--Grooming picture-->
+                  <img src="/lucky3.jpg" alt="Lucky picture" />
                 </div>
                 <div class="back face">
                   <h1 class="title">FLUFFY</h1>
@@ -363,7 +381,8 @@
             <div id="card-container">
               <div id="card4">
                 <div class="front face">
-                  <img src="/lucky5.jpg" alt="" />
+                  <!--Play picture-->
+                  <img src="/lucky5.jpg" alt="Lucky picture" />
                 </div>
                 <div class="back face">
                   <h1 class="title">Friendly</h1>
@@ -377,10 +396,13 @@
           </div>
         </div>
       </section>
+      <!--Section 3-->
       <section class="background">
         <div class="content-wrapper">
           <p class="content-title content-margin">Let's play!</p>
+          <!--Cards 2-->
           <div class="card-container2">
+            <!--Crazy picture-->
             <div
               class="card2"
               style="
@@ -391,7 +413,6 @@
                 --caption: 'My house - 2022';
               "
             ></div>
-
             <a
               href="https://www.instagram.com/joseanegrigolo/"
               rel="noopener"
@@ -409,7 +430,7 @@
                 "
               ></div
             ></a>
-
+            <!--Pool party picture-->
             <div
               class="card2"
               style="
@@ -420,7 +441,7 @@
                 --caption: 'Pool party - 2022';
               "
             ></div>
-
+            <!--grooming picture-->
             <div
               class="card2"
               style="
@@ -435,9 +456,11 @@
         </div>
       </section>
     </div>
+    <!--JQuery-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/3.10.1/lodash.min.js"></script>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
     <script>
+      /*Section 1 JS*/
       var ticking = false;
       var isFirefox = /Firefox/i.test(navigator.userAgent);
       var isIe =
