--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="description" content="Page about my dog/wolf Lucky." />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/34f32b53a7.js"
+      crossorigin="anonymous"
+    ></script>
     <title>My Wolf 🐺</title>
 
     <style>
@@ -127,6 +131,7 @@
         font-style: italic;
         font-weight: 900;
       }
+
       .content-footer {
         margin-top: 100px;
       }
@@ -261,6 +266,30 @@
         font-size: 3vmin;
         opacity: 0.75;
         text-align: center;
+      }
+
+      .margin-icon {
+        margin: 10px;
+        color: #368fa2;
+        font-size: 25px;
+      }
+
+      .margin-icon:hover {
+        color: white;
+      }
+
+      .a-icon {
+        background-color: white;
+        color: white;
+        border-radius: 150px;
+        font-size: 25px;
+        padding: 10px 5px;
+        opacity: 0.5;
+      }
+      .a-icon:hover {
+        background: #50c5e0;
+
+        opacity: 0.8;
       }
 
       /*media*/
@@ -453,6 +482,26 @@
               "
             ></div>
           </div>
+          <p>
+            <span class="a-icon">
+              <a
+                href="https://github.com/JoseaneGrigolo/petpage"
+                rel="noopener"
+                title="GitHub Link"
+                target="_blank"
+                ><i class="fa-brands fa-github-alt margin-icon"></i></a
+            ></span>
+            <span class="a-icon">
+              <a
+                href="https://www.instagram.com/joseanegrigolo/"
+                rel="noopener"
+                title="Instagram Link"
+                target="_blank"
+              >
+                <i class="fa-brands fa-instagram margin-icon"></i>
+              </a>
+            </span>
+          </p>
         </div>
       </section>
     </div>
