--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
       .background:first-child {
         /*pool party picture*/
-        background-image: url(/lucky2.jpeg);
+        background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/783/original/lucky2.jpeg?1670363111);
         -webkit-transform: translateY(-10vh);
         -ms-transform: translateY(-10vh);
         transform: translateY(-10vh);
@@ -75,12 +75,12 @@
 
       .background:nth-child(2) {
         /*mommy day picture*/
-        background-image: url(/lucky4.jpg);
+        background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/785/original/lucky4.jpg?1670363219);
       }
 
       .background:nth-child(3) {
         /*pool picture*/
-        background-image: url(/lucky6.jpeg);
+        background-image: url(https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/787/original/lucky6.jpeg?1670363311);
       }
 
       .background:nth-child(1) {
@@ -362,7 +362,10 @@
               <div id="card">
                 <div class="front face">
                   <!--Crazy picture-->
-                  <img src="/lucky1.jpg" alt="Lucky picture" />
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/782/original/lucky1.jpg?1670363021"
+                    alt="Lucky picture"
+                  />
                 </div>
                 <div class="back face">
                   <h1 class="title">CRAZY</h1>
@@ -379,7 +382,10 @@
               <div id="card2">
                 <div class="front face">
                   <!--pool party picture-->
-                  <img src="/lucky2.jpeg" alt="Lucky picture" />
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/783/original/lucky2.jpeg?1670363111"
+                    alt="Lucky picture"
+                  />
                 </div>
                 <div class="back face">
                   <h1 class="title">LOVELY</h1>
@@ -396,7 +402,10 @@
               <div id="card3">
                 <div class="front face">
                   <!--Grooming picture-->
-                  <img src="/lucky3.jpg" alt="Lucky picture" />
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/784/original/lucky3.jpg?1670363185"
+                    alt="Lucky picture"
+                  />
                 </div>
                 <div class="back face">
                   <h1 class="title">FLUFFY</h1>
@@ -411,7 +420,10 @@
               <div id="card4">
                 <div class="front face">
                   <!--Play picture-->
-                  <img src="/lucky5.jpg" alt="Lucky picture" />
+                  <img
+                    src="https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/786/original/lucky5.jpg?1670363275"
+                    alt="Lucky picture"
+                  />
                 </div>
                 <div class="back face">
                   <h1 class="title">Friendly</h1>
@@ -435,7 +447,7 @@
             <div
               class="card2"
               style="
-                --image: url('/lucky1.jpg');
+                --image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/782/original/lucky1.jpg?1670363021');
                 --angle: -5deg;
                 --x: 5%;
                 --y: 15%;
@@ -451,7 +463,7 @@
               <div
                 class="card2"
                 style="
-                  --image: url('/instagram.png');
+                  --image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/788/original/instagram.png?1670363394');
                   --angle: -1deg;
                   --x: -10%;
                   --y: -20%;
@@ -463,7 +475,7 @@
             <div
               class="card2"
               style="
-                --image: url('/lucky2.jpeg');
+                --image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/783/original/lucky2.jpeg?1670363111');
                 --angle: -4deg;
                 --x: -20%;
                 --y: 5%;
@@ -474,7 +486,7 @@
             <div
               class="card2"
               style="
-                --image: url('/lucky3.jpg');
+                --image: url('https://s3.amazonaws.com/shecodesio-production/uploads/files/000/056/784/original/lucky3.jpg?1670363185');
                 --angle: 7deg;
                 --x: 10%;
                 --y: -7%;
